--- a/templates/book_detail.html
+++ b/templates/book_detail.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="{% static 'css/book-detail.css' %}">
 {% endblock per_page_css %}
 
+{% block message %}
+{% endblock message %}
+
 {% block main_content %}
 
     <div class="container mt-2">
