--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -13,66 +13,86 @@
         <img src="{% static 'images/dogear.jpg' %}"/>
     </div>
 
-    <div class="container">
-        <h1 class="text-center mb-3 mt-3">New Releases</h1>
-        <div class="row flex-row flex-nowrap overflow-x-auto">
-            {% for book in new_books %}
-                <div class="col-sm-12 col-md-4 col-lg-3">
-                    <div class="card">
-                        <a href="{% url 'books:detail' book.slug %}">
-                            <img class="card-img-top" src="{{ book.item_picture.url }}" alt="{{ book.name }}">
-                        </a>
-                        <div class="card-body">
-                            <a href="{% url 'books:detail' book.slug %}">
-                                <h3 class="card-title">{{ book.name }}</h3>
-                            </a>
-                            <h5 class="card-subtitle">{{ book.author }}</h5>
-                        </div>
-                    </div>
-                </div>
-            {% endfor %}
-        </div>
+    <div class="container-fluid">
+		<div class="row">
+			<div class="col-md-9">
+				<div class="card pad-top bg-light">
+					<div class="card-body">
+						<h1 class="text-center mb-3 mt-3">New Releases</h1>
+						<div class="row flex-row flex-nowrap overflow-x-auto">
+							{% for book in new_books %}
+								<div class="col-sm-12 col-md-4 col-lg-3 pad-top">
+									<div class="card">
+										<a href="{% url 'books:detail' book.slug %}">
+											<img class="card-img-top" style="" src="{{ book.item_picture.url }}" alt="{{ book.name }}">
+										</a>
+										<div class="card-body">
+											<a href="{% url 'books:detail' book.slug %}">
+												<h3 class="card-title">{{ book.name }}</h3>
+											</a>
+											<h5 class="card-subtitle">{{ book.author }}</h5>
+										</div>
+									</div>
+								</div>
+							{% endfor %}
+						</div>
+					</div>
+				</div>
 
-        <h1 class="text-center mb-3 mt-3">Featured Authors</h1>
-        <div class="row flex-row flex-nowrap overflow-x-auto">
-            {% for author in latest_authors %}
-                <div class="col-sm-12 col-md-4 col-lg-3">
-                    <div class="card">
-                        <img class="card-img-top" src="{% static 'images/img.png' %}" alt="{{ author.name }}">
-                        <div class="card-body">
-                            <h3 class="card-title">{{ author.name }}</h3>
-                        </div>
-                    </div>
-                </div>
-            {% endfor %}
-        </div>
+				<div class="card pad-top bg-light">
+					<div class="card-body">
+						<h1 class="text-center mb-3 mt-3">Featured Authors</h1>
+						<div class="row flex-row flex-nowrap overflow-x-auto">
+							{% for author in latest_authors %}
+								<div class="col-sm-12 col-md-4 col-lg-3 pad-top">
+									<div class="card">
+										<div class="card-body">
+                                            <a href="{% url "books:query" %}?author={{ author.name }}"><h3 class="card-title">{{ author.name }}</h3></a>
+										</div>
+									</div>
+								</div>
+							{% endfor %}
+						</div>
+					</div>
+				</div>
 
-
-        <h1 class="text-center mb-3 mt-3">Genres</h1>
-        <div class="row flex-row flex-nowrap overflow-x-auto">
-            {% for genre in genres %}
-                <div class="col-sm-12 col-md-4 col-lg-3">
-                    <div class="card">
-                        <img class="card-img-top" src="{% static 'images/img.png' %}" alt="{{ genre.subjects }}">
-                        <div class="card-body">
-                            <h3 class="card-title">{{ genre.subjects }}</h3>
-                        </div>
-                    </div>
-                </div>
-            {% endfor %}
-        </div>
+				<div class="card pad-top bg-light">
+					<div class="card-body">
+						<h1 class="text-center mb-3 mt-3">Genres</h1>
+						<div class="row flex-row flex-nowrap overflow-x-auto">
+							{% for genre in genres %}
+								<div class="col-sm-12 col-md-4 col-lg-3 pad-top">
+									<div class="card" style="margin-bottom: 10px;">
+										<div class="card-body">
+                                            <a href="{% url "books:query" %}?genre={{ genre.subjects }}"><h3 class="card-title">{{ genre.subjects }}</h3></a>
+										</div>
+									</div>
+								</div>
+							{% endfor %}
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-3">
+                <br>
+				<h4> New York Times Books Twitter</h4>
+				<a class="twitter-timeline" data-lang="en" data-chrome="nofooter noheader noscrollbar" data-width="100%" data-height="95%" data-theme="light" data-link-color="#4286f4" href="https://twitter.com/nytimesbooks">New York Times Books</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
+		</div>
     </div>
-
-    <div class="container-fluid about-us mt-4">
-        <div class="row">
-            <div class="col-md-12">
-                <h4>About Us:</h4>
-                <p>We are an e-commerce bookstore that allows vendors to connect with customers
-                    and sell books with ease. We were a brick and mortar store that took to the
-                    web as a sales platform. By focusing on what we do best we can make sure that
-                    your experience is the best possible. </p>
-            </div>
-        </div>
-    </div>
+	<div class="container-fluid about-us mt-4">
+		<div class="row">
+			<div class="col-md-12">
+				<h4>About Us:</h4>
+				<p>We are an e-commerce bookstore that allows vendors to connect with customers
+					and sell books with ease. We were a brick and mortar store that took to the
+					web as a sales platform. By focusing on what we do best we can make sure that
+					your experience is the best possible.</p>
+				<h4>Helpful Sites:</h4>
+				<p class="pad-top" id="suggest">Not sure what to read? Check out <u><a href="https://www.goodreads.com/">Good Reads</a></u> for book suggestions.</p>
+				<p class="pad-top" id="suggest">For easy payment have <u><a href="https://www.paypal.com">paypal</a></u> ready at checkout.
+			</div>
+		</div>
+	</div>
 {% endblock main_content %}
 
