--- a/static/css/home.css
+++ b/static/css/home.css
@@ -8,6 +8,10 @@ a {
     transition: all 150ms ease;
 }
 
+#suggest a{
+	color:white;
+}
+
 a:hover {
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)"; /* IE 8 */
     filter: alpha(opacity=50); /* IE7 */
@@ -18,8 +22,18 @@ a:hover {
 .about-us {
     background-color: #545D68;
     color: white;
-    height: 300px;
+    height: 390px;
 
+}
+.card-img-top {
+	margin-left:5%;
+	height:200px;
+	width:90%;
+	margin-top: 10px;
+}
+
+.pad-top {
+	margin-top: 10px;
 }
 
 .about-us h4 {
