Tidying text up off banners

--- a/templates/delete_order.html
+++ b/templates/delete_order.html
@@ -7,10 +7,14 @@
 {% endblock per_page_css %}
 {% block main_content %}
 
-	<div class="container-fluid banner">
-		<div class="row">
+	<div class="container-fluid banner"></div>
+
+    <br>
+
+    <div class="container-fluid">
+		<div class="row" style="text-align: center">
 			<div class="col-md-12">
-				<h3> Confirm Deletion of order </h3>
+                <h3> <strong>Confirm Deletion of order</strong> </h3>
 			</div>
 		</div>
 	</div>
