--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -21,14 +21,13 @@
     <!-- send user instance as object, populate the page with it -->
     <div class="container-fluid main_content">
         <div class="row banner">
-            <div class="col-md-12">
-                <h3> Order Summary </h3>
-            </div>
+
         </div>
     </div>
 
     <div class="container confirm">
         <div class="row">
+                <h3> Checkout </h3>
             <table class="table table-light table-bordered">
                 <thead class="thead-dark">
                     <tr>
